@@ -1,3 +1,12 @@
+Fri Nov 08 12:14:20 1996  Jim Kingdon
+
+	IBM ICC (OS/2) lint:
+	* add.c (add): Only declare begin_added_files if
+	SERVER_SUPPORT.
+	* client.c (init_sockaddr): Change port argument from
+	unsigned short to unsigned int.  Change hostname
+	argument from const char * to char *.
+
 Sun Nov  3 18:24:28 1996  Noel Cragg  <noel@gargle.rain.org>
 
 	* sanity.sh (info): add new tests that check behavior of format
